# educational_git

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
tests/: conftest.py  test_data.py
ugit/: __init__.py  base.py  cli.py  data.py  diff.py
