[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ugit"
version = "1.0"
requires-python = ">=3.8"
description = "Educational Git implementation"

[project.scripts]
ugit = "ugit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ugit*"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
